# mikrovezerlok

./: Dokumentáció.docx  README.md  sdkconfig  snake.docx
main/: CMakeLists.txt  GlobalDefine.h  snake_main.c  spi_master_example_main.c  spi_master_example_main.cpp
main/Common/include/: common.h
main/Common/src/: common.c
main/Display/include/: ESP32ILI9341.h  IntILI9341.h
main/Display/src/: ESP32ILI9341.c  ESP32ILI9341.cpp
main/GameEngine/include/: snake.h
main/GameEngine/src/: snake.c
main/SPI/Include/: ESP32SPI.h
main/SPI/include/: ESP32SPI.h  ISPI.h
main/SPI/src/: ESP32SPI.c  ESP32SPI.cpp
